fix few bugs with cache and css.

--- a/src/js/todo.txt
+++ b/src/js/todo.txt
@@ -40,4 +40,6 @@
 #- Add a weblog list by tag
 - Add an error page (404, 500)
 - Add infinite pagination to librairy list
+#- Fix bug with submenus hover in main menu (space where over is left)
 #- Add scroll to top on lightbox openning
+
