--- a/src/js/todo.txt
+++ b/src/js/todo.txt
@@ -53,5 +53,36 @@
 - Move portfolio component to containers
 - Move librairy component to containers
 #- Change common reducer to wrap csrf, lightbox, modal, contextualmenu, settings, user, authors, modules, viewport,
-- Change selectors same way
+- Change selectors same way, 1 selector per container
+
 - Remove mainSelector to use only common at top level
+
+
+
+==== Containers and selectors ====
+
+- App -> appSelector
+    - Portfolio -> dispatch only
+        - PortfolioDetail -> portfolioDetailSelector
+        - PortfolioEditionForm -> portfolioEditionSelector
+    - Contact -> contactDescriptionSelector
+        - ContactMessage -> contactMessageSelector
+    - Weblog -> dispatch only
+        - WeblogList -> weblogListSelector
+        - WeblogListByTag -> weblogListByTagSelector
+        - WeblogDetail -> weblogDetailSelector
+    - Contact -> dispatch only
+        - ContactDescription -> contactDescriptionSelector
+        - ContactMessage -> contactMessageSelector
+    - Librairy -> dispatch only
+        - LibrairyLeftPanel -> librairyLeftPanelSelector
+        - LibrairyRightPanel -> librairyRightPanelSelector
+        - LibrairyList -> librairyListSelector
+        - LibrairyDetail -> librairyDetailSelector
+    - User -> dispatch only
+        - LoginForm -> loginSelector
+    - ContextualMenu -> contextualMenuSelector
+    - Lightbox -> lightboxSelector
+    - Modal -> modalSelector
+
+
