--- a/src/js/todo.txt
+++ b/src/js/todo.txt
@@ -64,7 +64,7 @@
 ==== Containers and selectors ====
 
 - App -> appSelector
-    - Portfolio -> dispatch only
+    - Portfolio -> portfolioSelector
         - PortfolioDetail -> portfolioDetailSelector
         - PortfolioEditionForm -> portfolioEditionSelector
 #    - Weblog -> dispatch only
