refactore conf api tests to use create_test_users.

--- a/src/api/todo.txt
+++ b/src/api/todo.txt
@@ -6,7 +6,7 @@ Change slug generation to exclude settings.RESERVED_WORDS
 
 conf:
     - use '/' relatives urls for logos instead of absolute urls
-    - review tests to use create_test_users
+#    - review tests to use create_test_users
 
 portfolio:
 #    - add views
