--- a/src/api/todo.txt
+++ b/src/api/todo.txt
@@ -7,6 +7,7 @@ Change slug generation to exclude settings.RESERVED_WORDS
 conf:
     - use '/' relatives urls for logos instead of absolute urls
 #    - review tests to use create_test_users
+    - review model to match client side requirements
 
 portfolio:
 #    - add views
@@ -15,7 +16,8 @@ portfolio:
 weblog:
 #    - add pk relation field for pictures instead of nesting
 #    - add pk relation field for author instead of nesting
-    - add view for posts headers
+#    - add view for posts headers
+    - add tests for posts headers
     - add tests for new rights with is_weblog_author
 
 librairy:
