update todo, improve recursive_import output, improve blocquote's style.

--- a/src/api/todo.txt
+++ b/src/api/todo.txt
@@ -32,4 +32,5 @@ librairy:
     - add view for collections (CRUD)
 #    - review tests to use create_test_users
 #    - add a way to import pictures from command line
-    - add a way to import pictures from an archive
+#    - add a way to import pictures from an archive
+    - add a way to export a bunch of pictures in an archive
