--- a/src/api/todo.txt
+++ b/src/api/todo.txt
@@ -33,4 +33,5 @@ librairy:
 #    - review tests to use create_test_users
 #    - add a way to import pictures from command line
 #    - add a way to import pictures from an archive
-    - add a way to export a bunch of pictures in an archive
+#    - add a way to export a bunch of pictures in an archive
+    - add test for zip export 
