--- a/src/api/todo.txt
+++ b/src/api/todo.txt
@@ -36,11 +36,12 @@ librairy:
 #    - add a way to export a bunch of pictures in an archive
 #    - add test for zip export 
     - add test for zip export API
+    - add user specific access to collections and collections ensembles
 #    - add test for collection API
 #    - add test for collection ensemble API
 #    - add test for collections headers
-    - add API endpoint to get all collection pictures at once
-    - test it
+#    - add API endpoint to get all collection pictures at once
+#    - test it
     - add API endpoint to get all collection ensemble pictures at once
     - test it
 #    - add API endpoint for collection pictures relation
