--- a/src/api/todo.txt
+++ b/src/api/todo.txt
@@ -42,7 +42,7 @@ librairy:
 #    - add test for collections headers
 #    - add API endpoint to get all collection pictures at once
 #    - test it
-    - add API endpoint to get all collection ensemble pictures at once
-    - test it
+#    - add API endpoint to get all collection ensemble pictures at once
+#    - test it
 #    - add API endpoint for collection pictures relation
 #    - test collection pictures API
