--- a/src/api/todo.txt
+++ b/src/api/todo.txt
@@ -37,6 +37,7 @@ librairy:
 #    - add test for zip export 
     - add test for zip export API
     - add user specific access to collections and collections ensembles
+    - change 400 error on existing picture - {post, portfolio, collection} relation to no op.
 #    - add test for collection API
 #    - add test for collection ensemble API
 #    - add test for collections headers
