--- a/src/js/todo.txt
+++ b/src/js/todo.txt
@@ -60,6 +60,7 @@
 #- Add a weblog list by tag
 - Add an error page (404, 500)
 - Add infinite pagination to librairy list
+- Redirect to « last import » tab after picture import
 #- Remember last librairy page visited
 #- Fix bug with submenus hover in main menu (space where over is left)
 #- Add scroll to top on lightbox openning
