--- a/src/js/todo.txt
+++ b/src/js/todo.txt
@@ -50,7 +50,7 @@
 - Add a redirection after post deletion
 - Add a redirection after post update
 - Invalidate post lists after post deletion
-- Fix bug with preview on empty markdown fields
+#- Fix bug with preview on empty markdown fields
 #- Add a way to edit contact description
 - Add a setting to prevent right clicks on pictures
 - Improve contextual menu to go on right or left side depending of viewport width
