display username in footer.

--- a/src/js/todo.txt
+++ b/src/js/todo.txt
@@ -15,7 +15,10 @@
 #- Add authentication for server rendering
 #- Add a confirmation modal on deletePicture action
 #- Add a refresh for token
-- Display username somewhere
+#- Display username somewhere
+- Display user info on a dropdown menu
+- Add register form
+- Add profile form
 - Redirect when user is unauthenticated in librairy
 #- Handle status codes in http.Fetch
 #- Add collections manager to librairy
