--- a/src/js/todo.txt
+++ b/src/js/todo.txt
@@ -26,13 +26,13 @@
 #- Update collection
 #- Delete collection
 #- Add a redirection after collection deletion
-- Add a redirection after collection update
+#- Add a redirection after collection update
 #- Add redirection after collection creation
 #- Create ensemble
 #- Update ensemble
 #- Delete ensemble
 #- Add a redirection after ensemble deletion
-- Add a redirection after ensemble update
+#- Add a redirection after ensemble update
 #- Add a redirection after ensemble creation
 - Add right panel with metadatas to librairy
 - Refactoring of viewport width to handle scroll bar
